nebula-cache-manager/core/objects/CacheConfiguration__mdt/CacheConfiguration__mdt.object-meta.xml
<CustomObject>
    <description>Used by Nebula Cache Manager to control the runtime behavior of different caches</description>
    <label>Cache Configuration</label>
    <pluralLabel>Cache Configurations</pluralLabel>
</CustomObject>