nebula-cache-manager/core/objects/CacheConfiguration__mdt/fields/IsImmutable__c.field-meta.xml
<CustomField>
    <fullName>IsImmutable__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Cache Is Immutable</label>
    <type>Checkbox</type>
</CustomField>