nebula-cache-manager/core/objects/CacheConfiguration__mdt/fields/PlatformCachePartitionName__c.field-meta.xml
<CustomField>
    <fullName>PlatformCachePartitionName__c</fullName>
    <label>Platform Cache Partition Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>