nebula-cache-manager/core/objects/CacheConfiguration__mdt/fields/PlatformCacheTimeToLive__c.field-meta.xml
<CustomField>
    <fullName>PlatformCacheTimeToLive__c</fullName>
    <label>Platform Cache Time-To-Live (TTL)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>