nebula-cache-manager/core/objects/CacheConfiguration__mdt/fields/PlatformCacheVisibility__c.field-meta.xml
<CustomField>
    <fullName>PlatformCacheVisibility__c</fullName>
    <label>Platform Cache Visibility</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>All</fullName>
                <default>true</default>
                <label>All</label>
            </value>
            <value>
                <fullName>Namespace</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>