nebula-cache-manager/core/objects/CacheConfiguration__mdt/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>MasterLabel</columns>
    <columns>DeveloperName</columns>
    <columns>IsEnabled__c</columns>
    <columns>IsImmutable__c</columns>
    <columns>PlatformCachePartitionName__c</columns>
    <columns>PlatformCacheTimeToLive__c</columns>
    <columns>PlatformCacheVisibility__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>